--- a/day4(project)/module4.html
+++ b/day4(project)/module4.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <section class="top-banner">
-
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1> <span class="name"> MD Sofie Uddin Sohel</span></h1>
@@ -18,10 +17,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga alias esse nam nesciunt ea eligendi officiis
                 voluptatibus, voluptate sit exercitationem vel suscipit inventore quam architecto tenetur laborum sequi non labore?</p>
                 <a class="link-button" target="_blank" href="https://www.linkedin.com/in/engrsofie/">linkedin</a>
-        </div class="half-width">
-        <div><img src="images/11.png"></div>    
+        </div>
+        <div class="half-width">
+            <img src="images/11.png">
+        </div>    
     </section>
-   
+    
     <section class="Dream-area" >
         <div class="half-width">
             <img src="images/12.png">
@@ -40,14 +41,14 @@
 <div id="full-stack" class="half-width single-experiences">
 <h2>Full Stack Web Dev</h2>
 <h3 class="name-profile">2021-Present = Pro level web Dev</h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam quae necessitatibus dolores consequuntur sunt illum libero facere voluptatum temporibus repellat error quas assumenda modi quidem obcaecati sed odio magnam accusantium illo voluptatem aliquam ea, adipisci ab! Dolorum harum inventore neque, minus deleniti quam vel minima officia impedit magnam incidunt repellat quia perferendis. Doloribus in delectus aliquid nostrum maiores, sed eaque sunt. Explicabo eius odio, dolorem neque, unde beatae quae minima ipsam laborum ratione inventore molestias maiores doloribus laudantium recusandae iure numquam repellat rerum deserunt, id veniam iusto sapiente. Animi magnam tenetur aspernatur fugiat accusamus omnis inventore in ad saepe esse nemo reiciendis, illo laudantium sit recusandae, aperiam enim incidunt. Cupiditate dolor qui rem, labore voluptatibus quam, animi laboriosam amet magni a inventore soluta, vitae modi tenetur atque nulla quisquam odit et eos! Numquam earum sunt optio laboriosam labore eum, adipisci voluptatibus, ratione autem nobis vitae nulla consequatur sit, placeat exercitationem deserunt. Nam quasi ducimus nesciunt obcaecati quidem. Quis, ea. Cumque laudantium modi mollitia consectetur voluptates reiciendis libero, deserunt obcaecati atque itaque vero esse totam similique, ducimus at temporibus eveniet? Labore unde quia eum velit eos ullam doloribus modi, cumque voluptates officiis asperiores quos? Obcaecati sapiente similique illum eos temporibus.
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam quae necessitatibus dolores consequuntur sunt illum libero facere voluptatum temporibus repellat error quas assumenda modi quidem obcaecati sed odio magnam accusantium illo voluptatem aliquam ea, adipisci ab!
 </p>
 </div>
 
 <div id="baby-stack" class="half-width single-experiences">
 <h2>  Baby Web Dev</h2>
 <h3 class="name-profile">2020-Present = 2021</h3>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem animi eos quis? Illum, cupiditate quae placeat aut explicabo modi! Esse autem blanditiis unde quidem! Vitae eius cupiditate similique non et earum provident perferendis velit recusandae quam illum necessitatibus vel iusto iure repudiandae sit molestias eligendi debitis libero itaque fugiat, quo nam possimus eaque? Fugiat numquam dolorum beatae in, iusto quo fugit iste laborum suscipit, ea, eveniet quibusdam tempore officiis. Aut necessitatibus fuga odit aspernatur sit in quam veniam? Eligendi optio omnis ipsam atque mollitia dolorem commodi quasi voluptatum praesentium excepturi sint quisquam eum maiores explicabo possimus ea quia saepe, tempore consequuntur unde nobis sed! At inventore culpa a quam itaque ab excepturi perferendis quae, dignissimos impedit exercitationem sint. Similique velit dolorem ipsa ad aut obcaecati quasi, ducimus, quos eum dolorum vitae est. Reprehenderit est quaerat consequuntur vel labore? Aliquam harum ducimus, ea delectus itaque ipsa vitae quas? Nobis et libero, nulla repudiandae voluptatem quasi officiis iusto sed sunt ullam ad similique eos error saepe eius minima ab aut voluptatum. Voluptate in fuga rem labore minima perferendis et repudiandae facilis aliquam? Fugiat natus ratione odio ullam, consequatur, deserunt animi assumenda voluptate dolor dicta eaque, neque eos modi cum earum non?
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem animi eos quis? Illum, cupiditate quae placeat aut explicabo modi! Esse autem blanditiis unde quidem! Vitae eius cupiditate similique non et earum provident perferendis velit recusandae quam illum necessitatibus vel iusto iure repudiandae sit molestias eligendi debitis libero itaque fugiat, quo nam possimus eaque?
 </p>
 </div>
     </section>
