--- a/day4(project)/module4.html
+++ b/day4(project)/module4.html
@@ -16,13 +16,13 @@
             <h3>I am cse engineer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga alias esse nam nesciunt ea eligendi officiis
                 voluptatibus, voluptate sit exercitationem vel suscipit inventore quam architecto tenetur laborum sequi non labore?</p>
-                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/engrsofie/">linkedin</a>
+            <!-- <a class="link-button" target="_blank" href="https://www.linkedin.com/in/engrsofie/">linkedin</a> -->
         </div>
         <div class="half-width">
             <img src="images/11.png">
         </div>    
     </section>
-    
+
     <section class="Dream-area" >
         <div class="half-width">
             <img src="images/12.png">
@@ -41,19 +41,18 @@
 <div id="full-stack" class="half-width single-experiences">
 <h2>Full Stack Web Dev</h2>
 <h3 class="name-profile">2021-Present = Pro level web Dev</h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aperiam quae necessitatibus dolores consequuntur sunt illum libero facere voluptatum temporibus repellat error quas assumenda modi quidem obcaecati sed odio magnam accusantium illo voluptatem aliquam ea, adipisci ab!
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint autem maiores excepturi deserunt aliquam dolorum culpa magni id sequi? Officiis placeat minima doloremque labore id odio nisi necessitatibus doloribus temporibus? Sunt repudiandae facere magni nam pariatur doloribus eius enim. Asperiores maiores quis totam labore dolorem ullam neque itaque libero iusto!
 </p>
 </div>
-
 <div id="baby-stack" class="half-width single-experiences">
 <h2>  Baby Web Dev</h2>
 <h3 class="name-profile">2020-Present = 2021</h3>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem animi eos quis? Illum, cupiditate quae placeat aut explicabo modi! Esse autem blanditiis unde quidem! Vitae eius cupiditate similique non et earum provident perferendis velit recusandae quam illum necessitatibus vel iusto iure repudiandae sit molestias eligendi debitis libero itaque fugiat, quo nam possimus eaque?
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum animi fugit dolores commodi maiores facere, modi cupiditate assumenda ab itaque, eveniet unde enim dolor quia at saepe quasi quod reprehenderit voluptas harum nesciunt distinctio? Quod reprehenderit qui expedita at soluta obcaecati nisi sit dignissimos, beatae pariatur tenetur quo ipsum id.
 </p>
 </div>
     </section>
 <footer>
-    <p>copy right from programming hero*********</p>
+    <p>copy right from programming hero****</p>
 </footer>
 </body>
 </html>
