--- a/day6(assignment)/index.html
+++ b/day6(assignment)/index.html
@@ -52,14 +52,18 @@
 <img src="images/project3.jpg">
 </div>
 </section>
-<div class="work">
+<!-- <div class="work">
     <img src="images/work.jpg">
-</div>
+</div> -->
 
+<div class="kemon-acho">
+    <a href="https://web.whatsapp.com/">Let's Chat</a>
+    <p>WORK HISTORY</p>
+    
+</div>
 <footer class="footer">
     <h3>Stay connected</h3>
     <h1> email engrsofie@gmail.com</h1>
 </footer>
-
 </body>
 </html>
