--- a/day6(assignment)/index.html
+++ b/day6(assignment)/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="head">
-        <ol>
+        <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Work</a></li>   
             <li><a href="#">Protfolio</a></li>
             <li><a href="#">Contact</a></li>
-        </ol>
+        </ul>
     </div>
     <br>
    <section class="top-header">
@@ -23,7 +23,7 @@
        <div class="half-width">
            <h1>Assalamu-Alaikum</h1>
            <h2>I'm <br> <span>MD SOFIE UDDIN SOHEL</span></h2>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui.</p>
+        git add .   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, qui.</p>
            <a class="a-tag" target="_blank" href="https://www.facebook.com/sohel724/">Facebook Here</a>
            <a href=""></a>
        </div>
@@ -36,7 +36,9 @@
        <div class="about">
           <h1>My Profile</h1> 
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem quo soluta nobis incidunt nisi ipsum minima vel, tempora beatae vero inventore expedita cum fuga esse quaerat laboriosam tempore obcaecati, quia adipisci. Nesciunt quo voluptatem placeat recusandae cupiditate? Adipisci alias voluptas vero. Odit quisquam, numquam earum officia quas nisi amet nam?</p>
-       </div>
+            <a class="a-tag" target="_blank" href="https://www.dropbox.com/login">Download CV</a>
+           <a href=""></a>
+        </div>
    </section>
 <div class="project">
 <h1> <span>LASTET</span> WORKING PROJECT</h1>
@@ -52,18 +54,25 @@
 <img src="images/project3.jpg">
 </div>
 </section>
-<!-- <div class="work">
-    <img src="images/work.jpg">
-</div> -->
-
-<div class="kemon-acho">
-    <a href="https://web.whatsapp.com/">Let's Chat</a>
+<!-- <div class="kemon-acho">
+    <a class="chat" target="_blank" href="https://www.dropbox.com/login">Let’s Chat</a>
+           <a href=""></a>
     <p>WORK HISTORY</p>
-    
-</div>
+</div> -->
+<section class="kemon-acho">
+    <div class="history">
+        <h1>WORK HISTORY</h1>
+        <a class="chat" target="_blank" href="https://www.dropbox.com/login">Let’s Chat</a>
+    </div>
+</section>
 <footer class="footer">
     <h3>Stay connected</h3>
     <h1> email engrsofie@gmail.com</h1>
+    <div class="logo">
+        <a target="_blank" href="https://www.linkedin.com/in/engrsofie/"><img src="images/1.png"></a>
+        <a target="_blank" href="https://www.w3schools.com/default.asp"><img src="images/2.png"></a>
+        <a target="_blank" href="https://www.instagram.com/"><img src="images/3.png"></a>
+    </div>
 </footer>
 </body>
 </html>
