--- a/Ena Bus/index.html
+++ b/Ena Bus/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 </head>
 
-<body id="hidden">
+<body>
     <!--Header and Menu Section-->
+    <div id="background-image">
+    <div id="hidden">
     <header class="container">
         <nav>
             <ul>
@@ -116,6 +118,8 @@
                 </div>
             </div>
             <button id='confirm-order' class="btn-style">Book Now</button>
+        </div>
+        </div>
         </div>
     </main>
 
